adds Editor.jsx

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <link href='/Draft.css' rel="stylesheet" type="text/css" />
+    <meta charset="utf-8" />
   </head>
   <body>
     <div id=main></div>
